--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "auth0-shiny",
   "version": "1.0.0",
   "description": "Auth0 Shiny proxy",
-  "repository": "git://github.com/auth0/shiny-auth0",
+  "repository": "https://github.com/NRGI/shiny-auth0",
   "author": "Auth0",
   "license": "MIT",
   "scripts": {
