--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^1.2.0",
     "express": "^4.14.0",
     "express-session": "^1.11.3",
+    "session-file-store": "^1.4.0",
     "http-proxy": "^1.11.2",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
