#1 Sending logs to Papertrail

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -23,5 +23,14 @@ User=root
 Group=shiny-auth0
 Environment=NODE_ENV=production
 
+[program:remote-syslog]
+command = /usr/local/bin/remote_syslog -D
+user = root
+autostart = true
+autorestart = true
+redirect_stderr = true
+stdout_logfile = /var/log/supervisor/remote-syslog.log
+
+
 [Install]
 WantedBy=multi-user.target
